force-app/main/default/objects/echosign_dev1__Form_Field_Child_Mapping_Entry__c/echosign_dev1__Form_Field_Child_Mapping_Entry__c.object-meta.xml
<CustomObject>
    <label>Form Field Child Mapping Entry</label>
    <nameField>
        <displayFormat>FFCME-{00000000}</displayFormat>
        <label>Form Field Child Mapping Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Field Child Mapping Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>