force-app/main/default/objects/echosign_dev1__Form_Field_Child_Mapping_Entry__c/fields/echosign_dev1__Form_Field_Child_Mapping__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Form_Field_Child_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Field Child Mapping</label>
    <referenceTo>echosign_dev1__Form_Field_Child_Mapping__c</referenceTo>
    <relationshipLabel>Form Field Child Mapping Entries</relationshipLabel>
    <relationshipName>Form_Field_Child_Mapping_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>