force-app/main/default/objects/echosign_dev1__Form_Field_Child_Mapping_Entry__c/fields/echosign_dev1__Form_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Form_Field_Name__c</fullName>
    <label>Target Document Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>